--- a/home.html
+++ b/home.html
@@ -29,17 +29,14 @@
 <body>
     <div class="header">
         <div class="menu-icon" onclick="toggleSidebar()">☰</div>
-        <div class="user-pill">Nguyễn Trung A<br>N23DCVTXXX</div>
+        <div class="user-pill">admin<br>N23DCVTXXX</div>
     </div>
     <div class="container">
         <div class="sidebar" id="sidebar">
             <div class="menu-list">
                 <a href="home.html" class="menu-item active"><span>🏠</span> Trang chủ</a>
-                <a href="#" class="menu-item">Thông báo</a>
                 <a href="room_info.html" class="menu-item">Thông tin phòng</a>
-                <a href="admin.html" class="menu-item">Thông tin cá nhân</a>
-                <a href="#" class="menu-item">Hóa đơn</a>
-                <a href="#" class="menu-item">Đổi mật khẩu</a>
+                <a href="profile.html" class="menu-item">Thông tin cá nhân</a>
                 <a href="#" class="menu-item">Hỗ trợ</a>
             </div>
             <div class="sidebar-footer">
@@ -51,7 +48,6 @@
             <div class="welcome-big">TRANG CHỦ</div>
             <div class="news-box">
                 <p>Chào mừng bạn đến với hệ thống quản lý KTX.</p>
-                <p>(Nội dung tin tức sẽ được cập nhật sau...)</p>
             </div>
         </div>
     </div>
