--- a/room_info.html
+++ b/room_info.html
@@ -263,7 +263,7 @@
     <div class="header">
         <div class="menu-icon" onclick="toggleSidebar()">☰</div>
         <div class="user-pill">
-            Nguyễn Trung A<br>
+            admin<br>
             N23DCVTXXX
         </div>
     </div>
@@ -273,13 +273,10 @@
         <div class="sidebar" id="sidebar">
             <div class="menu-list">
                 <a href="home.html" class="menu-item"><span>🏠</span> Trang chủ</a>
-                <a href="#" class="menu-item">Thông báo</a>
                 
                 <a href="room_info.html" class="menu-item active">Thông tin phòng</a>
                 
                 <a href="profile.html" class="menu-item">Thông tin cá nhân</a>
-                <a href="#" class="menu-item">Hóa đơn</a>
-                <a href="#" class="menu-item">Đổi mật khẩu</a>
                 <a href="#" class="menu-item">Hỗ trợ</a>
             </div>
 
