--- a/home.html
+++ b/home.html
@@ -35,8 +35,7 @@
         <div class="sidebar" id="sidebar">
             <div class="menu-list">
                 <a href="home.html" class="menu-item active"><span>🏠</span> Trang chủ</a>
-                <a href="room_info.html" class="menu-item">Thông tin phòng</a>
-                <a href="profile.html" class="menu-item">Thông tin cá nhân</a>
+                <a href="room_info.html?view=overview" class="menu-item">📋 Thông tin phòng</a>
                 <a href="#" class="menu-item">Hỗ trợ</a>
             </div>
             <div class="sidebar-footer">
